updated main image to hide just behind nav bar using top -36px. Stop the scrolling looking clunky

--- a/styles/brand-styles.css
+++ b/styles/brand-styles.css
@@ -12,9 +12,9 @@
 }
 .centered-logo {
 	position: absolute;
-	top: -11%;
-	left: 17%;
-	padding: 0px;
+	top: -3%;
+	left: 19%;
+	padding: 10px;
 	font-size: 50px;
 	font-family: Montserrat, sans-serif;
 	transform: translate(-50%, -40%);
